edited photo section

--- a/source/partials/library.html.erb
+++ b/source/partials/library.html.erb
@@ -1,19 +1,27 @@
 <div id="Photos" class="tab library">
   <div class="animation-show">
-      <%= image_tag 'library/9.jpg' %>
-      <p>Image Name</p>
+      <%= image_tag 'library/moonview.webp' %>
+      <p>Moonview</p>
   </div>
   <div class="animation-show">
-      <%= image_tag 'library/10.jpg' %>
-      <p>Image Name</p>
+      <%= image_tag 'library/sunsetsky.webp' %>
+      <p>Sunset Sky</p>
   </div>
   <div class="animation-show">
-      <%= image_tag 'library/11.jpg' %>
-      <p>Image Name</p>
+      <%= image_tag 'library/nightcap.webp' %>
+      <p>Nightcap</p>
   </div>
   <div class="animation-show">
-      <%= image_tag 'library/12.jpg' %>
-      <p>Image Name</p>
+      <%= image_tag 'library/flowerbush.webp' %>
+      <p>Morning Glow</p>
+  </div>
+  <div class="animation-show">
+      <%= image_tag 'library/sunnytree.webp' %>
+      <p>Sunny Tree</p>
+  </div>
+  <div class="animation-show">
+      <%= image_tag 'library/beachfront.webp' %>
+      <p>Beachfront</p>
   </div>
 </div>
 
