--- a/source/stylesheets/components/_parallax.scss
+++ b/source/stylesheets/components/_parallax.scss
@@ -12,7 +12,7 @@
   height: 100%;
   background-size: auto 100%;
   background-position: center bottom;
-  transition: 0.1s;
+  // transition: 0.1s;
   background-repeat: no-repeat;
   overflow-x: hidden;
 }
