--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -3,9 +3,11 @@
   <h1 class="animation-show">Contact Me</h1>
   <div class="border animation-show"></div>
   <form class="contact-form animation-show" action="https://formsubmit.co/gravityroom4@gmail.com" method="post">
-    <input type="text" name="name" class="contact-form-text" placeholder="Name">
-    <input type="email" name="email" class="contact-form-text" placeholder="Email">
-    <textarea name="message" class="contact-form-text" placeholder="Message"></textarea>
+  <input type="hidden" name="_subject" value="GRAVITY Message">
+  <input type="hidden" name="_autoresponse" value="Thank you for your question! I'll get back to you as soon as possible!">
+    <input type="text" name="name" class="form-control contact-form-text" placeholder="Name">
+    <input type="email" name="email" class="form-control contact-form-text" placeholder="Email">
+    <textarea name="message" class="form-control contact-form-text" placeholder="Message"></textarea>
     <input type="submit" class="contact-form-btn" value="Send">
   </form>
 </div>
