testing contact form 2

--- a/source/partials/contact.html.erb
+++ b/source/partials/contact.html.erb
@@ -2,7 +2,7 @@
 
   <h1 class="animation-show">Contact Me</h1>
   <div class="border animation-show"></div>
-  <form class="contact-form animation-show" action="https://formsubmit.co/heartpeace4@gmail.com" method="post">
+  <form class="contact-form animation-show" action="https://formsubmit.co/gravityroom4@gmail.com" method="post">
   <input type="hidden" name="_subject" value="GRAVITY Message">
   <input type="hidden" name="_autoresponse" value="Thank you for your question! I'll get back to you as soon as possible!">
     <input type="text" name="name" class="form-control contact-form-text" placeholder="Name">
