feat: add social links to intro section for earlier acesses within UX flow

--- a/source/partials/intro.html.erb
+++ b/source/partials/intro.html.erb
@@ -26,12 +26,18 @@
       Through Music, Photos, Videos, Words… and more.
       <br>
       It is a blessing and reminder that we have the tools to record the moments that are constantly passing away.
-
-
   </p>
-    <button class="animation-show">
-      <a href="#Contact">
-        Contact
-      </a>
-    </button>
+  <div class="intro-social-div animation-show">
+    <ul class="intro-social-ul">
+      <li><a href="https://open.spotify.com/artist/3vbXUUQLZUwtRpagZ8cErD" target="_blank"><i class="fa-brands fa-spotify"></i></a></li>
+      <li><a href="https://www.instagram.com/yayoi0410/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://www.youtube.com/@gravity_room" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+      <li><a href="https://soundcloud.com/gravityroom4" target="_blank"><i class="fa-brands fa-soundcloud"></i></a></li>
+    </ul>
+  </div>
+  <button class="animation-show">
+    <a href="#Contact">
+      Contact
+    </a>
+  </button>
 </div>
